// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly where background is set 1`] = `
<div
  className="sc-bdVaJa DiWAd"
/>
`;

exports[`renders correctly where there is no background 1`] = `
<div
  className="sc-bdVaJa kEFwkw"
/>
`;
